2010-02-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui/IdeStartup.cs: Add startup trace calls.

2010-02-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/SdiWorkspaceLayout.cs:
	* MonoDevelop.Ide.Gui.Dialogs/SplashScreen.cs:
	* MonoDevelop.Ide.Gui.Dialogs/NewProjectDialog.cs:
	* MonoDevelop.Ide.FindInFiles/SearchResultWidget.cs:
	* MonoDevelop.Ide.CodeTemplates/CodeTemplatePanel.cs:
	* MonoDevelop.Ide.Gui.Dialogs/IncludeNewFilesDialog.cs:
	* MonoDevelop.Ide.Gui.Components/ExtensibleTreeView.cs:
	* MonoDevelop.Ide.Gui.OptionPanels/KeyBindingsPanel.cs:
	* MonoDevelop.Ide.Gui.Dialogs/OverridesImplementsDialog.cs:
	* MonoDevelop.Ide.Gui.Dialogs/ConfirmProjectDeleteDialog.cs:
	* MonoDevelop.Ide.CodeFormatting/CodeFormattingPolicyPanelWidget.cs:
	  Track API changes for lazy loading images.

2010-02-08  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui/Ide.cs: Add startup trace calls.

2010-02-05  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.addin.xml:
	* MonoDevelop.Ide.Commands/FileCommands.cs:
	* MonoDevelop.Ide.Gui.Content/IPrintable.cs: Implement a Page
	  Setup command.

2010-02-05  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Commands/FileCommands.cs:
	* MonoDevelop.Ide.Gui.Content/IPrintable.cs: Add CanPrint
	  method to IPrintable.

2010-02-05  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui/TextEditor.cs:
	* MonoDevelop.Ide.Gui.Content/IEditableTextBuffer.cs:
	* MonoDevelop.Ide.Gui/HiddenTextEditorViewContent.cs: Added
	  method to check whether text editor has input focus.

	* MonoDevelop.Ide.Commands/EditCommands.cs: Only enable
	  "Insert standard header" command when text editor has input
	  focus. 

	* MonoDevelop.Ide.addin.xml: Improve ordering of edit menu.

2010-02-05  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* MonoDevelop.Ide.Gui.Dialogs/FileSelectorDialog.cs: Don't
	  show Close Workspace checkbox on save.
