@@ -28,32 +28,35 @@
 // WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
 using System;
-using System.Collections;
+using System.IO;
+using System.Collections.Generic;
+using System.Text.RegularExpressions;
 
 namespace MonoDevelop.Ide.Gui
 {
 	public class StartupInfo
 	{
-		static ArrayList requestedFileList = new ArrayList();
-		static ArrayList parameterList     = new ArrayList();
+		static List<string> requestedFileList = new List<string> ();
+		static List<string> parameterList = new List<string> ();
 
+		/// <summary>
+		/// Matches a filename string with optional line and column 
+		/// (/foo/bar/blah.cs;22;31)
+		/// </summary>
+		public static Regex fileExpression = new Regex (@"^(?<filename>[^;]+)(;(?<line>\d+))?(;(?<column>\d+))?$", RegexOptions.Compiled);
+		
 		public static string[] GetParameterList()
 		{
-			return GetStringArray(parameterList);
+			return parameterList.ToArray ();
 		}
 		
 		public static string[] GetRequestedFileList()
 		{
-			return GetStringArray(requestedFileList);
+			return requestedFileList.ToArray ();
 		}
 		
 		public static bool HasFiles {
 			get { return requestedFileList.Count > 0; }
-		}
-		
-		static string[] GetStringArray(ArrayList list)
-		{
-			return (string[])list.ToArray(typeof(string));
 		}
 		
 		public static void SetCommandLineArgs(string[] args)
@@ -63,18 +66,20 @@ namespace MonoDevelop.Ide.Gui
 			
 			foreach (string arg in args) {
 				string a = arg;
+				Match fileMatch = fileExpression.Match (a);
+				
 				// this does not yet work with relative paths
 				if (a[0] == '~') {
-					a = System.IO.Path.Combine (Environment.GetFolderPath (Environment.SpecialFolder.Personal), a.Substring (1));
+					a = Path.Combine (Environment.GetFolderPath (Environment.SpecialFolder.Personal), a.Substring (1));
 				}
 				
-				if (System.IO.File.Exists (a)) {
-					a = System.IO.Path.GetFullPath (a);
-					requestedFileList.Add (a);
-					return;
-				}
-	
-				if (a[0] == '-' || a[0] == '/') {
+				if (fileMatch != null && fileMatch.Success) {
+					string filename = fileMatch.Groups["filename"].Value;
+					if (File.Exists (filename)) {
+						a = a.Replace (filename, Path.GetFullPath (filename));
+						requestedFileList.Add (a);
+					}
+				} else if (a[0] == '-' || a[0] == '/') {
 					int markerLength = 1;
 					
 					if (a.Length >= 2 && a[0] == '-' && a[1] == '-') {
