@@ -1,3 +1,9 @@
+2010-02-09  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>
+
+	* MonoDevelop.Ide.Gui/IdeStartup.cs:
+	* MonoDevelop.Ide.Gui/StartupInfo.cs: Allow users to specify
+	  file line and column at launch.
+
 2010-02-09  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* MonoDevelop.Ide.Gui/IdeStartup.cs: Add startup trace calls.
